Remove Paper stuff & update Java 21 stuff